--- a/src/Style/GallaryComponent.css
+++ b/src/Style/GallaryComponent.css
@@ -3,3 +3,29 @@
     display: flex;
     flex-wrap: wrap;
 }
+
+.pagination{
+    display: flex;
+    justify-content:flex-start;
+    list-style: none;
+    cursor: pointer;
+}
+    
+.pagination a{padding: 10px;
+    border: 1px solid #47a7de;
+    color: #47a7de;
+}
+    
+.pagination_link{
+    font-weight: bold;
+}
+    
+.pagination_link--active a{
+    color: #fff;
+    background: #47a7de;
+}
+    
+.pagination_link--disabled a{
+    color: rgb(198,197,202);
+    border: 1px solid rgb(198, 197, 202);
+}
