--- a/src/Style/GallaryComponent.css
+++ b/src/Style/GallaryComponent.css
@@ -2,6 +2,40 @@
     width: 100%;
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
+}
+
+.header{
+    background-color: rgb(199, 238, 238);
+    width: 98%;
+    height: 100px;
+    margin-left: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-right: 50px;
+    border-radius: 5px;
+}
+.heading-text{
+    padding: 30px;
+    text-align: center;
+    color: rgb(236, 162, 138);
+    font-size: xx-large;
+}
+.gallary-btn{
+   background-color: #fff;
+   color: #47a7de;
+   padding: 10px;
+   font-size: medium;
+   font-weight: bold;
+   border: 2px solid rgb(62, 161, 226);
+   border-radius: 5px;
+   cursor: pointer;
+   
+}
+
+.page-container{
+    padding-left: 400px;
+    padding-top: 10px;
 }
 
 .pagination{
