--- a/src/Style/PhotoComponent.css
+++ b/src/Style/PhotoComponent.css
@@ -1,8 +1,8 @@
 
 .card{
     height: auto;
-    width:200px;
-    height:210px;
+    width:150px;
+    height:150px;
     border: 2px solid black;
     border-radius: 5px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
@@ -10,7 +10,6 @@
     padding: 10px;
     margin: 10px;
     cursor: pointer;
-    justify-content: center;
 }
 .card:hover {
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
@@ -18,6 +17,11 @@
 .thumbnail{
     padding-left: 20px;
 }
+.thumbnail img{
+    height: 100px;
+    width: 100px;
+}
 .title{
+    font-size: small;
     text-align: center;
 }
